--- a/style.css
+++ b/style.css
@@ -12,17 +12,15 @@ html {
     background-color: hsl(225, 100%, 94%);
     display: grid;
     place-content: center;
-}
-
-body {
     background-image: url(images/pattern-background-mobile.svg);
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: left;
+    background-position: center;
 }
 
 body {
     max-width: 400px;
+    
 }
 
 main {
