--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Red+Hat+Display:ital,wght@0,500;0,700;0,900;1,500;1,700;1,900&display=swap');
+
+:root {
+    --fonte1: font-family: 'Fraunces', serif;
+    --fonte2: font-family: 'Red Hat Display', sans-serif;
+    --cor1: hsl(225, 100%, 94%);
+    --cor2: hsl(245, 75%, 52%);
+    --cor3: hsl(225, 100%, 98%);
+    --cor4: hsl(224, 23%, 55%);
+    --cor5: hsl(223, 47%, 23%);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -9,18 +21,18 @@
 
 html {
     height: 100%;
-    background-color: hsl(225, 100%, 94%);
+    background-color: var(--cor1);
     display: grid;
     place-content: center;
     background-image: url(images/pattern-background-mobile.svg);
-    background-repeat: no-repeat;
+    background-repeat: repeat-x;
     background-size: contain;
-    background-position: center;
+    background-position: top;
+    font-family: var(--fonte2);
 }
 
 body {
-    max-width: 400px;
-    
+    max-width: 400px;    
 }
 
 main {
@@ -31,12 +43,22 @@ main {
 }
 
 h1 {
-    padding-top: 15px;
+    padding-top: 35px;
+    font-size: 25px;
+    font-weight: bolder;
+    color: var(--cor5);
 }
 
 p {
     padding: 16px;
     line-height: 25px;
+    color: var(--cor4);
+    font-size: 17px;
+}
+
+#p {
+    width: 300px;
+    margin: auto;
 }
 
 
@@ -49,11 +71,11 @@ img {
 #pag {
     display: flex;
     align-items: center;
-    background-color: whitesmoke;
+    background-color: var(--cor3);
     margin: 30px;
     justify-content: space-around;
     border-radius: 10px;
-    color: gray;
+    color: var(--cor4);
 }
 
 #pag > p {
@@ -73,13 +95,15 @@ img {
     color: white;
     margin: auto;
     background-color: hsl(245, 75%, 52%);
+    font-weight: bolder;
 }
 
 #b2 {
     background-color: white;    
-    color: gray;
+    color: var(--cor4);
     margin: 10px;
     margin: 25px 0px;
+    font-weight: bolder;
 }
 
 
