--- a/style.css
+++ b/style.css
@@ -81,11 +81,20 @@ img {
 #pag > p {
     position: relative;
     right: 10%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
 }
 
 #sd {
    color: black;
    font-weight: 700;
+}
+
+a {
+    color: var(--cor2);
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
 }
 
 #b1 {
@@ -94,7 +103,7 @@ img {
     border-radius: 10px;
     color: white;
     margin: auto;
-    background-color: hsl(245, 75%, 52%);
+    background-color: var(--cor2);
     font-weight: bolder;
 }
 
@@ -106,4 +115,28 @@ img {
     font-weight: bolder;
 }
 
+a, button {
+    cursor: pointer;
+}
+
+a:hover {
+    text-decoration: none;
+    color: hsla(245, 75%, 52%, 0.658);
+}
+
+#b1:hover {
+    background-color: hsla(245, 75%, 52%, 0.658);
+}
+
+#b2:hover {
+    color: var(--cor5);
+}
+
+@media screen and (min-width: 1440px) {
+    html {
+        background-image: url(images/pattern-background-desktop.svg);
+        background-size:;
+    }
+    
+}
 
