--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ a:hover {
 @media screen and (min-width: 1440px) {
     html {
         background-image: url(images/pattern-background-desktop.svg);
+        background-size: contain;
     }
     
 }
